Amend search results with attachment info
This uses again another query per item to retrieve some information
about each attachment already in the search results.
